move to slackware packager, document .env add templates

--- a/.env
+++ b/.env
@@ -1,8 +1,11 @@
 # Shared defaults for build and packaging scripts.
+PKGNAME=stress-ng-gpu-unraid
+MAINTAINER=you@example.com
+SLACKWARE_IMAGE=vbatts/slackware:15.0
+BUILD_IMAGE=debian:bookworm
+BUILD=1_unraid
+ARCH=x86_64
+PLATFORM=linux/amd64
 REF=master
 OUT=dist
-PLATFORM=linux/amd64
 REPO=repo
-ARCH=x86_64
-BUILD=1_unraid
-PKGNAME=stress-ng-gpu-unraid
